fastrace-macro/tests/ui/err/has-duplicated-arguments.rs
use fastrace::trace;

#[trace(name = "Name", name = "Name")]
fn f() {}

fn main() {}
